@@ -1,3 +1,10 @@
+2013-09-16  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/prg/compton.jl: fixup support for
+	xinerama shadow cropping, improve support for tabs [fuchur]
+
+	* lisp/sawfish/wm/tabs/tabgroup.jl: add tab-group-windows-hook,
+	returning all windows in the current tabgroup [fuchur]
+
 2013-09-14  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/prg/compton.jl: improved working with shadows,
 	don't draw shadows for tabbed windows by default, but provide an
